{
    "name": "PlalyerControls",
    "maps": [
        {
            "name": "PlayerSpaceMovement",
            "id": "aa3f5814-50ef-4849-9b3a-e7ef51f4b077",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "fd784413-3864-4277-add5-d0dc4a6e8cc3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Camera",
                    "type": "PassThrough",
                    "id": "5dd63807-2d51-4d56-817b-a0dd6f44bb15",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "19ce50eb-e33d-44ac-9935-2b26f7fc9e25",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b76587ed-27b2-43ae-b57c-06d2521b630a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e7db995b-fcb4-48ba-9752-b5ec3f6b41f0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a7f5c43d-177e-457a-b667-5b33d2f6afd6",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5676fab3-3fb2-4a1f-93b3-cc8e37d7b4fd",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "68a47f1b-6930-4f84-b1cd-af1266834245",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerActions",
            "id": "e79443f9-3cea-4508-9e46-c62ad93535b0",
            "actions": [
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "dfe8d298-39c3-4621-90d8-8be130599d5b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4df1c136-1da2-4abd-ba2d-80f2e659f500",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Combat",
            "id": "5f1eaacb-d4e7-496c-8a46-bfe8add4c790",
            "actions": [
                {
                    "name": "Main_attack",
                    "type": "Button",
                    "id": "de2abd42-c097-4576-b39f-ebe9b9101df1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Secondary_attack",
                    "type": "PassThrough",
                    "id": "1d3c141d-796a-48d6-87dc-1064dfee6d4e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bd1d5b3a-be35-407d-8c3b-c5eb24a4ac99",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Main_attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "529356bc-af45-4bd7-8300-2e17d5cc7084",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Secondary_attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Interactivity",
            "id": "534d8534-2ae9-4b01-8f69-e0240c0fdcc4",
            "actions": [
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "d180fb22-b365-48e2-88c4-7b66b7d7c4e9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "2d3b8cee-5642-46c5-8cbb-866306ea042f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e35b2c5c-ed89-4c58-b307-ca7c08bc01fc",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c5b2eec-ef45-4f41-9e81-1d6aca6c3250",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}